--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/joseph/workspace/Minecraft/bukkit-1.2.5-R0.2-20120404.022946-2.jar">
+	<classpathentry kind="lib" path="lib/bukkit-1.4.5-R0.3-20121211.011136-19.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
 		</attributes>
