Refactored onCommand function to be slightly more clean. Still needs more work and better logic. Changed the config.yml filename in BlockCrusherConfig.

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: BlockCrusher
 
-main: Dingmatt.BlockCrusher.BlockCrusher
-version: 1.6
+main: com.github.majora2007.blockcrusher.BlockCrusher
+version: 1.0
 commands:
     blockcrusher:
         description: Reloads the config
