Refactored the handling of commands to be handled in a separate class.

--- a/plugin.yml
+++ b/plugin.yml
@@ -6,6 +6,7 @@ commands:
     blockcrusher:
         description: Reloads the config
         usage: /blockcrusher help
+        alias: bc
     bc:
         description: Reloads the config
-        usage: /blockcrusher help
+        usage: /bc help
