Implemented 3 different block breaking schemes. The first is 'first' in which the block being pushed by the piston is broken if there is a full stack or an unpushable block within 12 blocks. The second mode is 'last' in which the last block on the stack (the one before an unpushable block) is broken. This was the previous standard. The third is 'all' where all blocks in the stack are broken. The same rules apply in which when there are air pockets the default implementation is used.

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,9 @@
 settings:
-  break_blocks: 
-    true
+# Break block mode: none, first, last, all
+# None - Disables plugin, first - breaks the block the piston moves, last - breaks the block being 
+# pushed into an un-pushable block, all - breaks the entire stack of blocks between first and last.
+  break_block_mode: 
+    last
 
 breakable_blocks:
   - 1             # Stone
