--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
-/bin
-/target
+*.class
+bin/
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
+
