Refactored package name to fit with other plugins.

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,3 +1,3 @@
 name: BlockCrusher
-main: com.github.majora2007.blockcrusher.BlockCrusher
+main: com.majora2007.minecraft.blockcrusher.BlockCrusher
 version: 1.0.2
